# backend-take-home

./: .env.example  .gitignore  CHALLENGE.md  README.md  pyproject.toml  renovate.json  scripts.py
takehome/: __init__.py  app.py  config.py  mock.py
takehome/templates/: index.html
tests/: test_app.py
